fixed zero result case for group functions in subquery (Bug #3505) fixed LIMIT 0 for zero rows optimisation

mysql-test/r/subselect.result:
  test case for bugreport
mysql-test/t/subselect.test:
  test case for bugreport
sql/sql_select.cc:
  cleanup sum function on reinit
  take in account LIMIT if zero result optimisation case
  do not forgot sum function in zero result case for subqueries